2019-08-20  Iain Buclaw  <ibuclaw@gdcproject.org>

	PR d/90444
	* d-builtins.cc (build_frontend_type): Build anonymous RECORD_TYPE
	nodes as well, push all fields to the struct members.
	(d_build_builtins_module): Push anonymous va_list structs to the
	builtins module, naming them __builtin_va_list.
	(d_init_builtins): Use sorry instead of gcc_unreachable if va_list did
	not succeed in being represented as a D type.

2019-08-13  Richard Sandiford  <richard.sandiford@arm.com>

	PR middle-end/91421
	* intrinsics.cc (maybe_set_intrinsic): Use set_decl_built_in_function.

2019-08-11  Iain Buclaw  <ibuclaw@gdcproject.org>

	PR d/90601
	* d-convert.cc (convert_expr): Don't convert an expression to its
	original front-end type before converting to its target type.

2019-08-10  Iain Buclaw  <ibuclaw@gdcproject.org>

	PR d/91238
	* d-codegen.cc (build_address): If taking the address of a CALL_EXPR,
	wrap it in a TARGET_EXPR.

2019-08-10  Iain Buclaw  <ibuclaw@gdcproject.org>

	PR d/90893
	* runtime.cc (enum libcall_type): Rename to...
	(enum d_libcall_type): ...this.
	(get_libcall_type): Use d_libcall_type.
	(build_libcall_decl): Likewise.

2019-06-16  Iain Buclaw  <ibuclaw@gdcproject.org>

	PR d/90559
	* d-target.cc (Target::_init): Reduce max static data size to INT_MAX.

2019-06-16  Iain Buclaw  <ibuclaw@gdcproject.org>

	PR d/90651
	* typeinfo.cc (object_module): New variable.
	(make_frontend_typeinfo): Update signature.  Set temporary on
	generated TypeInfo classes.
	(create_tinfo_types): Set object_module.  Move generation of front-end
	typeinfo into ...
	(create_frontend_tinfo_types): ... New function.
	(layout_typeinfo): Call create_frontend_tinfo_types.
	(layout_classinfo): Likewise.
	(layout_cpp_typeinfo): Likewise.
	(create_typeinfo): Likewise.

2019-06-11  Richard Biener  <rguenthe@suse.de>

	d/90778
	* toir.cc (pop_label): Only queue labels in a vector.
	(cmp_labels): Label decl comparator.
	(pop_binding_level): Pop labels in DECL_UID order to avoid